git ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -450,6 +450,7 @@ crashlytics-build.properties
 [Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
 
 # Temporary auto-generated Android Assets
-[Aa]ssets/[Ss]treamingAssets/aa.meta
-[Aa]ssets/[Ss]treamingAssets/aa/*
-[Aa]ssets/[Ss]cripts
+UnityProject/[Aa]ssets/[Ss]treamingAssets/aa.meta
+UnityProject/[Aa]ssets/[Ss]treamingAssets/aa/*
+UnityProject/[Aa]ssets/[Ss]cripts/*
+UnityProject/[Aa]ssets/[Ss]hader/*
